refactor: replace deprecated newInstance method